--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,8 +5,20 @@
 }
 
 .App h1 {
-  font-family: 'Yanone Kaffeesatz', sans-serif;
-  margin-top: 0;
+  color:white
+}
+
+.App h1 {
+  padding-bottom: 50px;
+  padding-top: 70px;
+  font-family:fantasy
+}
+
+.homepage{
+  font-family:fantasy
+}
+
+.homepage{
   color:white
 }
 
@@ -96,3 +108,37 @@ li:hover {
   margin-right: 6px;
   margin-top: 6px;
 }
+
+form{
+  margin-left: 600px;
+  margin-right: 600px;
+  
+}
+
+label{
+  color: #dddddd;
+  font-family:fantasy
+  
+  
+}
+
+label{
+  font-size: 20px;
+}
+
+main{
+  margin-top: 50px;
+  
+}
+
+main div {
+  padding-top: 10px;
+  padding-bottom: 20px;
+}
+
+.navBar{
+  font-size: x-large;
+}
+
+
+
