--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,8 @@
 .App {
   text-align: center;
   background: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.5) ), url('https://images.unsplash.com/photo-1489599849927-2ee91cede3ba?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1740&q=80');
-  height: 200vh
+  /* height: 200vh; */
+  background-attachment:scroll;
 }
 
 .App h1 {
@@ -143,6 +144,13 @@ main div {
 .navBar{
   font-size: x-large;
 }
+
+h5 {
+  padding-left:250px;
+  padding-right: 250px;
+  font-style: italic;
+}
+
 
 
 
